Updated production config

--- a/League/Configuration/DbContextList.Production.config
+++ b/League/Configuration/DbContextList.Production.config
@@ -2,24 +2,24 @@
 <!-- Content will be deserialized to class DbContextList -->
 <DbContextList>
   <DbContext>
-    <OrganizationKey>augsburg</OrganizationKey>
+    <OrganizationKey>a-indoor</OrganizationKey>
     <ConnectionKey>leagueConnectionString</ConnectionKey>
-    <Catalog>LeagueA</Catalog>
+    <Catalog>a-indoor</Catalog>
     <Schema>dbo</Schema>
 	<ConnetionTimeOut>15</ConnetionTimeOut>
   </DbContext>
   <DbContext>
     <OrganizationKey>a-beach</OrganizationKey>
     <ConnectionKey>leagueConnectionString</ConnectionKey>
-    <Catalog>LeagueA</Catalog>
-    <Schema>abeach</Schema>
+    <Catalog>a-beach</Catalog>
+    <Schema>dbo</Schema>
 	<ConnetionTimeOut>15</ConnetionTimeOut>
   </DbContext>
   <DbContext>
     <!-- Empty default key, used when no organization key is present -->
     <OrganizationKey></OrganizationKey>
     <ConnectionKey>leagueConnectionString</ConnectionKey>
-    <Catalog>LeagueA</Catalog>
+    <Catalog>a-indoor</Catalog>
     <Schema>dbo</Schema>
 	<ConnetionTimeOut>15</ConnetionTimeOut>
   </DbContext>
