--- a/League/Configuration/LeagueSettings.A-Beach.config
+++ b/League/Configuration/LeagueSettings.A-Beach.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <OrganizationContext>
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
-  <Name>Volleyball Mixedliga Augsburg</Name>
-  <ShortName>Mixedliga Augsburg</ShortName>
+  <Name>Volleyball Beachrunde Augsburg</Name>
+  <ShortName>Beachrunde Augsburg</ShortName>
   <Description></Description>
-  <HomepageUrl>https://volleyball-liga.de/augsburg</HomepageUrl>
-  <ApplicationTournamentId IsAllowed="false">22</ApplicationTournamentId>
+  <HomepageUrl>https://volleyball-liga.de/a-beach</HomepageUrl>
+  <ApplicationTournamentId IsAllowed="false">3</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
-  <MapTournamentId>22</MapTournamentId>
+  <MapTournamentId>3</MapTournamentId>
   <!-- if a team is registered for ApplicationTournamentId this is used for editing the team -->
-  <TeamTournamentId>22</TeamTournamentId>
-  <MatchPlanTournamentId>22</MatchPlanTournamentId>
-  <MatchResultTournamentId>22</MatchResultTournamentId>
+  <TeamTournamentId>3</TeamTournamentId>
+  <MatchPlanTournamentId>3</MatchPlanTournamentId>
+  <MatchResultTournamentId>3</MatchResultTournamentId>
   <Photos>
     <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
     <TeamDefaultFilename>kein_foto.jpg</TeamDefaultFilename>
@@ -56,20 +56,20 @@
   </TeamRuleSet>
   <Email>
     <ContactFrom>
-      <DisplayName>Mixedliga Augsburg</DisplayName>
-      <Address>a-indoor@volleyball-liga.de</Address>
+      <DisplayName>Beachrunde Augsburg</DisplayName>
+      <Address>a-beach@volleyball-liga.de</Address>
     </ContactFrom>
     <ContactTo>
-      <DisplayName>Mixedliga Augsburg</DisplayName>
-      <Address>a-indoor@volleyball-liga.de</Address>
+      <DisplayName>Beachrunde Augsburg</DisplayName>
+      <Address>a-beach@volleyball-liga.de</Address>
     </ContactTo>
     <GeneralFrom>
-      <DisplayName>Mixedliga Augsburg</DisplayName>
-      <Address>a-indoor@volleyball-liga.de</Address>
+      <DisplayName>Beachrunde Augsburg</DisplayName>
+      <Address>a-beach@volleyball-liga.de</Address>
     </GeneralFrom>
     <GeneralTo>
-      <DisplayName>Mixedliga Augsburg</DisplayName>
-      <Address>a-indoor@volleyball-liga.de</Address>
+      <DisplayName>Beachrunde Augsburg</DisplayName>
+      <Address>a-beach@volleyball-liga.de</Address>
     </GeneralTo>
   </Email>
 </OrganizationContext>
