Add inividual razor views and extended navigation bar

--- a/League/Configuration/DbContextList.Development.config
+++ b/League/Configuration/DbContextList.Development.config
@@ -17,8 +17,15 @@
   </DbContext>
   <DbContext>
     <OrganizationKey>a-indoor</OrganizationKey>
-    <ConnectionKey>AugsburgConnectionString</ConnectionKey>
+    <ConnectionKey>AIndoorConnectionString</ConnectionKey>
     <Catalog>a-indoor</Catalog>
+    <Schema>dbo</Schema>
+    <ConnetionTimeOut>15</ConnetionTimeOut>
+  </DbContext>
+  <DbContext>
+    <OrganizationKey>a-beach</OrganizationKey>
+    <ConnectionKey>ABeachConnectionString</ConnectionKey>
+    <Catalog>a-beach</Catalog>
     <Schema>dbo</Schema>
     <ConnetionTimeOut>15</ConnetionTimeOut>
   </DbContext>
