--- a/League/Configuration/LeagueNavigation.A-Beach.config
+++ b/League/Configuration/LeagueNavigation.A-Beach.config
@@ -2,26 +2,18 @@
 <!-- English nodes text can be localized with League.Navigation.NavigationResource.resx -->
 <NavNode key="RootNode">
     <Children>
-        <NavNode key="AugsburgOrgMenu" url="/" text="AA" preservedRouteParameters="organization">
+        <NavNode key="ABeachMenu" url="/" text="AB" preservedRouteParameters="organization">
         </NavNode>
         <NavNode treeBuilderName="League.Navigation.LeaguesNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
-        <NavNode key="Infos" controller="info" action="Index" text="Infos" preservedRouteParameters="organization">
-            <Children>
-                <NavNode key="News" controller="news" action="index" text="News and dates" preservedRouteParameters="organization">
-                    <Children />
-                </NavNode>
-                <NavNode key="Rules" controller="info" action="index" text="Game order" preservedRouteParameters="organization">
-                    <Children />
-                </NavNode>
-            </Children>
+        <NavNode treeBuilderName="League.Navigation.InfosNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
         <NavNode key="TeamsInfos" controller="team" action="Index" text="Teams" preservedRouteParameters="organization">
             <Children>
                 <NavNode key="MyTeam" controller="team" action="myteam" text="My team" authorizationPolicy="MyTeamPolicy" preservedRouteParameters="organization">
                   <Children />
                 </NavNode>
-                <NavNode key="Application" controller="TeamApplication" action="index" text="Register team for league" preservedRouteParameters="organization">
+                <NavNode key="Application" controller="TeamApplication" action="index" text="Register team for next season" preservedRouteParameters="organization">
                     <Children />
                 </NavNode>
                 <NavNode key="Managers" controller="team" action="list" text="Contact teams" preservedRouteParameters="organization">
