--- a/League/Configuration/LeagueSettings.A-Beach.config
+++ b/League/Configuration/LeagueSettings.A-Beach.config
@@ -3,7 +3,7 @@
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
   <Name>Volleyball Beachrunde Augsburg</Name>
   <ShortName>Beachrunde Augsburg</ShortName>
-  <Description></Description>
+  <Description>Die Beachrunde Augsburg ist eine Liga für gemischte Teams mit zwei oder vier SpielerInnen. Es wird auf Sand gespielt.</Description>
   <HomepageUrl>https://volleyball-liga.de/a-beach</HomepageUrl>
   <ApplicationTournamentId IsAllowed="false">3</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
