--- a/League/Configuration/LeagueSettings.A-Indoor.config
+++ b/League/Configuration/LeagueSettings.A-Indoor.config
@@ -3,7 +3,7 @@
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
   <Name>Volleyball Mixedliga Augsburg</Name>
   <ShortName>Mixedliga Augsburg</ShortName>
-  <Description></Description>
+  <Description>Die Mixedliga Augsburg ist eine Hallenliga für gemischte Teams aus dem Großraum Augsburg. Sie besteht seit über 20 Jahren.</Description>
   <HomepageUrl>https://volleyball-liga.de/augsburg</HomepageUrl>
   <ApplicationTournamentId IsAllowed="false">22</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
