--- a/League/Configuration/LeagueSettings.OtherOrg.config
+++ b/League/Configuration/LeagueSettings.OtherOrg.config
@@ -3,8 +3,8 @@
   <Guid>AB2E2412-C610-4521-AE12-7BDA286E2244</Guid>
   <Name>Volleyball Other League</Name>
   <ShortName>Other League</ShortName>
-  <Description></Description>
-  <HomepageUrl>https://volleyball-liga.de</HomepageUrl>
+  <Description>Liga für Testzwecke</Description>
+  <HomepageUrl>https://volleyball-liga.de/otherorg</HomepageUrl>
   <ApplicationTournamentId IsAllowed="false">2</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
   <MapTournamentId>2</MapTournamentId>
