--- a/League/Configuration/LeagueSettings.TestOrg.config
+++ b/League/Configuration/LeagueSettings.TestOrg.config
@@ -3,8 +3,8 @@
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
   <Name>Volleyball Test League</Name>
   <ShortName>Test League</ShortName>
-  <Description></Description>
-  <HomepageUrl>https://volleyball-liga.de</HomepageUrl>
+  <Description>Liga für Testzwecke</Description>
+  <HomepageUrl>https://volleyball-liga.de/testorg</HomepageUrl>
   <ApplicationTournamentId IsAllowed="true">3</ApplicationTournamentId>
   <ApplicationDeadline>2020-05-04T00:00:00</ApplicationDeadline>
   <MapTournamentId>2</MapTournamentId>
