--- a/League/Configuration/OrganizationSiteList.Development.config
+++ b/League/Configuration/OrganizationSiteList.Development.config
@@ -31,7 +31,7 @@
       <!-- The value of the URL segment used to identify the organization -->
       <UrlSegmentValue>augsburg</UrlSegmentValue>
       <!-- FolderName must always be present -->
-      <FolderName>augsburg</FolderName>
+      <FolderName>a-indoor</FolderName>
       <OrganizationKey>a-indoor</OrganizationKey>
       <IdentityCookieName>.LeagueAugsburg</IdentityCookieName>
       <SessionName>.LeagueAugsburg</SessionName>
