--- a/League/Configuration/OrganizationSiteList.Production.config
+++ b/League/Configuration/OrganizationSiteList.Production.config
@@ -7,8 +7,8 @@
       <!-- The value of the URL segment used to identify the organization -->
       <UrlSegmentValue>augsburg</UrlSegmentValue>
       <!-- FolderName must always be present -->
-      <FolderName>augsburg</FolderName>
-      <OrganizationKey>a-indoor</OrganizationKey>
+      <FolderName>a-indoor</FolderName>
+      <OrganizationKey>augsburg</OrganizationKey>
       <IdentityCookieName>.LeagueAugsburg</IdentityCookieName>
       <SessionName>.LeagueAugsburg</SessionName>
       <HideInMenu>false</HideInMenu>
