Increased time-out for start-up background job

--- a/League/Configuration/OrganizationSiteList.Production.config
+++ b/League/Configuration/OrganizationSiteList.Production.config
@@ -8,7 +8,7 @@
       <UrlSegmentValue>augsburg</UrlSegmentValue>
       <!-- FolderName must always be present -->
       <FolderName>a-indoor</FolderName>
-      <OrganizationKey>augsburg</OrganizationKey>
+      <OrganizationKey>a-indoor</OrganizationKey>
       <IdentityCookieName>.LeagueAugsburg</IdentityCookieName>
       <SessionName>.LeagueAugsburg</SessionName>
       <HideInMenu>false</HideInMenu>
