--- a/League/Configuration/LeagueNavigation.TestOrg.config
+++ b/League/Configuration/LeagueNavigation.TestOrg.config
@@ -56,7 +56,7 @@
                  preservedRouteParameters="organization"
         >
             <Children>
-                <NavNode key="AccountManage" controller="Manage" action="Index" text="Manage" preservedRouteParameters="organization">
+                <NavNode key="AccountManage" controller="Manage" action="Index" text="Manage account" preservedRouteParameters="organization">
                     <Children />
                 </NavNode>
                 <NavNode key="AccountReSignIn" controller="Account" action="SignIn" text="Sign in with other account" preservedRouteParameters="organization">
