Beautified home button of navigation bar

--- a/League/Configuration/LeagueNavigation.OtherOrg.config
+++ b/League/Configuration/LeagueNavigation.OtherOrg.config
@@ -2,7 +2,7 @@
 <!-- English nodes text can be localized with League.Navigation.NavigationResource.resx -->
 <NavNode key="RootNode">
     <Children>
-        <NavNode key="OtherOrgMenu" url="/" text="OO" preservedRouteParameters="organization">
+        <NavNode key="OtherOrgMenu" url="/otherorg" text="" iconCssClass="fas fa-1x fa-home" preservedRouteParameters="organization">
         </NavNode>
         <NavNode treeBuilderName="League.Navigation.LeaguesNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
