--- a/League/Configuration/LeagueNavigation.A-Indoor.config
+++ b/League/Configuration/LeagueNavigation.A-Indoor.config
@@ -2,7 +2,7 @@
 <!-- English nodes text can be localized with League.Navigation.NavigationResource.resx -->
 <NavNode key="RootNode">
     <Children>
-        <NavNode key="AugsburgOrgMenu" url="/" text="AA" preservedRouteParameters="organization">
+        <NavNode key="AIndoorMenu" url="/augsburg" text="" iconCssClass="fas fa-1x fa-home" preservedRouteParameters="organization">
         </NavNode>
         <NavNode treeBuilderName="League.Navigation.LeaguesNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
