--- a/League/Configuration/LeagueNavigation.TestOrg.config
+++ b/League/Configuration/LeagueNavigation.TestOrg.config
@@ -2,7 +2,7 @@
 <!-- English nodes text can be localized with League.Navigation.NavigationResource.resx -->
 <NavNode key="RootNode">
     <Children>
-        <NavNode key="TestOrgMenu" url="/" text="TO" preservedRouteParameters="organization">
+        <NavNode key="TestOrgMenu" url="/testorg" text="" iconCssClass="fas fa-1x fa-home" preservedRouteParameters="organization">
         </NavNode>
         <NavNode treeBuilderName="League.Navigation.LeaguesNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
