--- a/League/Configuration/LeagueNavigation.config
+++ b/League/Configuration/LeagueNavigation.config
@@ -2,7 +2,7 @@
 <!-- English nodes text can be localized with League.Navigation.NavigationResource.resx -->
 <NavNode key="RootNode">
     <Children>
-        <NavNode key="NoOrgMenu" url="/welcome" text="NO">
+        <NavNode key="LeagueMainMenu" url="/welcome" text="" iconCssClass="fas fa-1x fa-home">
         </NavNode>
         <NavNode treeBuilderName="League.Navigation.LeaguesNavigationTreeBuilder" treeBuilderAppendToBuilderNode="false">
         </NavNode>
