Added package Microsoft.DotNet.PlatformAbstractions

--- a/League/Configuration/AppSettings.json
+++ b/League/Configuration/AppSettings.json
@@ -29,11 +29,11 @@
     },
     "Password": {
       "RequireDigit": false,
-      "RequireLowercase": false,
+      "RequireLowercase": true,
       "RequireNonAlphanumeric": false,
-      "RequireUppercase": false,
-      "RequiredLength": 6,
-      "RequiredUniqueChars": 2
+      "RequireUppercase": true,
+      "RequiredLength": 8,
+      "RequiredUniqueChars": 4
     },
     "Lockout": {
       "AllowedForNewUsers": true,
