--- a/League/web.config
+++ b/League/web.config
@@ -12,7 +12,6 @@
         <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44303" />
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         <environmentVariable name="COMPLUS_ForceENC" value="1" />
-        <environmentVariable name="ASPNETCORE_URLS" value="localhost;axuno1" />
       </environmentVariables>
     </aspNetCore>
     <security>
@@ -23,3 +22,4 @@
     </security>
   </system.webServer>
 </configuration>
+<!--ProjectGuid: 5E67E5AA-3AF9-4F72-A5BC-8EF790DE85A3-->
