Updated production configuration

--- a/League/Configuration/LeagueSettings.A-Indoor.config
+++ b/League/Configuration/LeagueSettings.A-Indoor.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <OrganizationContext>
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
-  <Name>Volleyball Mixedliga Augsburg</Name>
+  <Name>Volleyball-Mixedliga Augsburg</Name>
   <ShortName>Mixedliga Augsburg</ShortName>
-  <Description>Die Mixedliga Augsburg ist eine Hallenliga für gemischte Teams aus dem Großraum Augsburg. Sie besteht seit über 20 Jahren.</Description>
+  <Description>Die Volleyball-Mixedliga Augsburg ist eine Hallenliga für gemischte Teams aus dem Großraum Augsburg. Sie besteht seit über 20 Jahren.</Description>
   <HomepageUrl>https://volleyball-liga.de/augsburg</HomepageUrl>
   <ApplicationTournamentId IsAllowed="false">22</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
@@ -19,7 +19,7 @@
     <PersonDefaultFilename>kein_foto.jpg</PersonDefaultFilename>
   </Photos>
   <Bank>
-    <Recipient>axuno gemeinnuetzige GmbH - League Augsburg</Recipient>
+    <Recipient>axuno - Mixedliga Augsburg</Recipient>
     <BankName>Fidor Bank AG</BankName>
     <BIC>FDDODEMMXXX</BIC>
     <IBAN>DE61 700 222 000 020 137 800</IBAN>
