--- a/League/Configuration/LeagueSettings.A-Beach.config
+++ b/League/Configuration/LeagueSettings.A-Beach.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <OrganizationContext>
   <Guid>BF2E2412-C610-4521-AE12-7BDA286E4480</Guid>
-  <Name>Volleyball Beachrunde Augsburg</Name>
+  <Name>Beachvolleyballrunde Augsburg</Name>
   <ShortName>Beachrunde Augsburg</ShortName>
-  <Description>Die Beachrunde Augsburg ist eine Liga für gemischte Teams mit zwei oder vier SpielerInnen. Es wird auf Sand gespielt.</Description>
+  <Description>Die Beachvolleyballrunde Augsburg ist eine Liga für gemischte Teams mit zwei oder vier SpielerInnen. Es wird auf Sand gespielt.</Description>
   <HomepageUrl>https://volleyball-liga.de/a-beach</HomepageUrl>
   <ApplicationTournamentId IsAllowed="false">3</ApplicationTournamentId>
   <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
@@ -19,7 +19,7 @@
     <PersonDefaultFilename>kein_foto.jpg</PersonDefaultFilename>
   </Photos>
   <Bank>
-    <Recipient>axuno gemeinnuetzige GmbH - League Augsburg</Recipient>
+    <Recipient>axuno - Beachrunde Augsburg</Recipient>
     <BankName>Fidor Bank AG</BankName>
     <BIC>FDDODEMMXXX</BIC>
     <IBAN>DE61 700 222 000 020 137 800</IBAN>
