Updated npm packages bootstrap, bootstrap-select, moment, node-sass

--- a/League/package.json
+++ b/League/package.json
@@ -8,10 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "5.10.1",
+    "@fortawesome/fontawesome-free": "5.13.0",
     "autoprefixer": "9.7.6",
-    "bootstrap": "4.4.1",
-    "bootstrap-select": "1.13.16",
+    "bootstrap": "4.5.0",
+    "bootstrap-select": "1.13.17",
     "cssnano": "4.1.10",
     "dropzone": "5.7.0",
     "grunt": "1.1.0",
@@ -27,8 +27,8 @@
     "jquery-validation-unobtrusive": "3.2.11",
     "js-cookie": "2.2.1",
     "jsnlog": "2.29.0",
-    "moment": "2.24.0",
-    "node-sass": "^4.13.1",
+    "moment": "2.25.3",
+    "node-sass": "4.14.1",
     "pixrem": "5.0.0",
     "popper.js": "1.16.1",
     "tempusdominus-bootstrap-4": "5.1.2",
