--- a/League/Configuration/LeagueSettings.TestOrg.config
+++ b/League/Configuration/LeagueSettings.TestOrg.config
@@ -37,7 +37,8 @@
     <PlannedMatchTimeMustStayInCurrentLegBoundaries>false</PlannedMatchTimeMustStayInCurrentLegBoundaries>
     <UseOnlyDatePartForTeamFreeBusyTimes>true</UseOnlyDatePartForTeamFreeBusyTimes>
   </FixtureRuleSet>
-  <MaxDaysForResultCorrection>10</MaxDaysForResultCorrection>
+  <!-- max. number of days or a negative value (-1) for 'unlimited' -->
+  <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
   <TeamRuleSet>
     <HomeMatchTime>
       <IsEditable>True</IsEditable>
