--- a/League/Configuration/LeagueSettings.OtherOrg.config
+++ b/League/Configuration/LeagueSettings.OtherOrg.config
@@ -37,6 +37,7 @@
     <PlannedMatchTimeMustStayInCurrentLegBoundaries>false</PlannedMatchTimeMustStayInCurrentLegBoundaries>
     <UseOnlyDatePartForTeamFreeBusyTimes>true</UseOnlyDatePartForTeamFreeBusyTimes>
   </FixtureRuleSet>
+  <!-- max. number of days or a negative value (-1) for 'unlimited' -->
   <MaxDaysForResultCorrection>10</MaxDaysForResultCorrection>
   <TeamRuleSet>
     <HomeMatchTime>
