Refactored Site, SiteList and SiteContext

--- a/League/Configuration/SiteList.Development.config
+++ b/League/Configuration/SiteList.Development.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!-- Content will be deserialized to class OrganizationSiteList -->
-<OrganizationSiteList>
+<!-- Content will be deserialized to class SiteList -->
+<SiteList>
     <Organization>
-        <!-- HostName may only be blank if all HostNames in the OrganizationSiteList are blank -->
+        <!-- HostName may only be blank if all HostNames in the SiteList are blank -->
         <HostName></HostName>
         <!-- The value of the URL segment used to identify the organization -->
         <UrlSegmentValue>testorg</UrlSegmentValue>
@@ -14,7 +14,7 @@
         <HideInMenu>false</HideInMenu>
     </Organization>
     <Organization>
-      <!-- HostName may only be blank if all HostNames in the OrganizationSiteList are blank -->
+      <!-- HostName may only be blank if all HostNames in the SiteList are blank -->
         <HostName></HostName>
         <!-- The value of the URL segment used to identify the organization -->
         <UrlSegmentValue>otherorg</UrlSegmentValue>
@@ -26,7 +26,7 @@
         <HideInMenu>false</HideInMenu>
     </Organization>
     <Organization>
-      <!-- HostName may only be blank if all HostNames in the OrganizationSiteList are blank -->
+      <!-- HostName may only be blank if all HostNames in the SiteList are blank -->
       <HostName></HostName>
       <!-- The value of the URL segment used to identify the organization -->
       <UrlSegmentValue>augsburg</UrlSegmentValue>
@@ -38,7 +38,7 @@
       <HideInMenu>false</HideInMenu>
     </Organization>
     <Organization>
-      <!-- HostName may only be blank if all HostNames in the OrganizationSiteList are blank -->
+      <!-- HostName may only be blank if all HostNames in the SiteList are blank -->
       <HostName></HostName>
       <!-- The value of the URL segment used to identify the organization -->
       <UrlSegmentValue>a-beach</UrlSegmentValue>
@@ -51,7 +51,7 @@
     </Organization>
     <Organization>
         <!-- Default definitions -->
-        <!-- HostName may only be blank if all HostNames in the OrganizationSiteList are blank -->
+        <!-- HostName may only be blank if all HostNames in the SiteList are blank -->
         <HostName></HostName>
         <!-- The value of the URL segment used to identify the organization; blank for default -->
         <UrlSegmentValue/>
@@ -63,4 +63,4 @@
         <SessionName>.League</SessionName>
         <HideInMenu>true</HideInMenu>
     </Organization>
-</OrganizationSiteList>
+</SiteList>
