--- a/League/web.config
+++ b/League/web.config
@@ -7,7 +7,7 @@
       <remove name="aspNetCore" />
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+    <aspNetCore processPath="%LAUNCHER_PATH%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
       <environmentVariables>
         <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44303" />
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
