--- a/League/Configuration/LeagueSettings.A-Indoor.config
+++ b/League/Configuration/LeagueSettings.A-Indoor.config
@@ -19,11 +19,13 @@
     <PersonDefaultFilename>kein_foto.jpg</PersonDefaultFilename>
   </Photos>
   <Bank>
+    <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
     <Recipient>axuno - Mixedliga Augsburg</Recipient>
     <BankName>Fidor Bank AG</BankName>
     <BIC>FDDODEMMXXX</BIC>
     <IBAN>DE61 700 222 000 020 137 800</IBAN>
     <Amount>19.00</Amount>
+    <Currency>EUR</Currency>
   </Bank>
   <FixtureRuleSet>
     <RegularMatchStartTime>
