--- a/League/Configuration/IisRewrite.config
+++ b/League/Configuration/IisRewrite.config
@@ -5,6 +5,7 @@
             <match url=".*" />
             <conditions logicalGrouping="MatchAny">
                 <add input="{HTTP_HOST}" pattern="^localhost(:\d+)?$" />
+                <add input="{HTTP_HOST}" pattern="^axuno1(:\d+)?$" />
             </conditions>
             <action type="None" />
         </rule>
