--- a/League/League.csproj
+++ b/League/League.csproj
@@ -6,18 +6,18 @@
     <RootNamespace>League</RootNamespace>
     <UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
     <NeutralLanguage></NeutralLanguage>
-    <Version>4.0.1</Version>
+    <Version>4.0.2</Version>
     <PackageId>Volleyball-League</PackageId>
     <Authors>axuno gGmbH</Authors>
     <Product>Volleyball-League</Product>
-    <Description>The Volleyball League Platform brings everything necessary to organize and to run a league.</Description>
+    <Description>Volleyball League is an open source sports platform that brings everything necessary to organize and to run a league.</Description>
     <Copyright>(C) 2000-2020 axuo gGmbH</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/axuno/Volleyball-League</PackageProjectUrl>
     <RepositoryUrl>https://github.com/axuno/Volleyball-League</RepositoryUrl>
     <PackageTags>volleyball league competition asp.net-core</PackageTags>
     <PackageReleaseNotes>Production release for platform https://volleyball-liga.de/</PackageReleaseNotes>
-    <AssemblyVersion>4.0.1.0</AssemblyVersion>
+    <AssemblyVersion>4.0.2.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
