--- a/League.Test/League.Test.csproj
+++ b/League.Test/League.Test.csproj
@@ -5,12 +5,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.5" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
         <PackageReference Include="NUnit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.0" />
-        <PackageReference Include="Moq" Version="4.13.1" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.5" />
+        <PackageReference Include="Moq" Version="4.14.1" />
         <PackageReference Include="ObjectsComparer" Version="1.4.1" />
     </ItemGroup>
 
