--- a/League/League.csproj
+++ b/League/League.csproj
@@ -24,13 +24,13 @@
     <PackageReference Include="cloudscribe.Web.Navigation" Version="4.0.3" />
     <PackageReference Include="JSNLog" Version="2.29.0" />
     <PackageReference Include="MailMergeLib" Version="5.7.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
-    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
-    <PackageReference Include="NLog" Version="4.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
+    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
     <PackageReference Include="PuppeteerSharp" Version="2.0.3" />
     <PackageReference Include="StackifyMiddleware" Version="3.0.5.2" />
@@ -61,7 +61,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Axuno.BackgroundTask\Axuno.BackgroundQueue.csproj" />
+    <ProjectReference Include="..\Axuno.BackgroundTask\Axuno.BackgroundTask.csproj" />
     <ProjectReference Include="..\Axuno.Web\Axuno.Web.csproj" />
     <ProjectReference Include="..\TournamentManager\DAL\DatabaseGeneric\TournamentManager.DAL.DbGeneric.csproj" />
     <ProjectReference Include="..\TournamentManager\DAL\DatabaseSpecific\TournamentManager.DAL.DBSpecific.csproj" />
