--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <NeutralLanguage></NeutralLanguage>
   </PropertyGroup>
 
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ical.Net" Version="4.1.11" />
+	<PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+	<PackageReference Include="Ical.Net" Version="4.1.11" />
     <PackageReference Include="libphonenumber-csharp" Version="8.12.4" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
