Updated https redirection

--- a/League/Configuration/IisRewrite.config
+++ b/League/Configuration/IisRewrite.config
@@ -9,10 +9,16 @@
             </conditions>
             <action type="None" />
         </rule>
-        <rule name="All hostnames to single website" stopProcessing="true">
+	    <rule name="Enforce HTTPS" stopProcessing="true">
+		    <match url=".*" />
+		    <conditions>
+			    <add input="{HTTPS}" pattern="^OFF$" />
+		    </conditions>
+		    <action type="Redirect" url="https://volleyball-liga.de{REQUEST_URI}" redirectType="Permanent" appendQueryString="true"/>
+	    </rule>
+        <rule name="All host names to single target host name" stopProcessing="true">
             <match url=".*" />
             <conditions logicalGrouping="MatchAny">
-                <add input="{HTTPS}" pattern="^OFF$"/>
                 <add input="{HTTP_HOST}" pattern="^www.volleyball-liga.de$" />
                 <add input="{HTTP_HOST}" pattern="^volleyball-mixedliga.de$" />
                 <add input="{HTTP_HOST}" pattern="^www.volleyball-mixedliga.de$" />
