--- a/League/Configuration/IisRewrite.config
+++ b/League/Configuration/IisRewrite.config
@@ -20,8 +20,7 @@
             <match url=".*" />
             <conditions logicalGrouping="MatchAny">
                 <add input="{HTTP_HOST}" pattern="^www.volleyball-liga.de$" />
-                <add input="{HTTP_HOST}" pattern="^volleyball-mixedliga.de$" />
-                <add input="{HTTP_HOST}" pattern="^www.volleyball-mixedliga.de$" />
+                <add input="{HTTP_HOST}" pattern="^(www.)?volleyball-mixedliga.de(.*)$" />
             </conditions>
             <action type="Redirect" url="https://volleyball-liga.de{REQUEST_URI}" redirectType="Permanent" appendQueryString="true"/>
         </rule>
