--- a/League/League.csproj
+++ b/League/League.csproj
@@ -1,201 +1,208 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>League</AssemblyName>
-    <RootNamespace>League</RootNamespace>
-    <UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
-    <NeutralLanguage></NeutralLanguage>
-    <Version>4.0.3</Version>
-    <PackageId>Volleyball-League</PackageId>
-    <Authors>axuno gGmbH</Authors>
-    <Product>Volleyball-League</Product>
-    <Description>Volleyball League is an open source sports platform that brings everything necessary to organize and to run a league.</Description>
-    <Copyright>(C) 2000-2020 axuo gGmbH</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/axuno/Volleyball-League</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/axuno/Volleyball-League</RepositoryUrl>
-    <PackageTags>volleyball league competition asp.net-core</PackageTags>
-    <PackageReleaseNotes>Production release for platform https://volleyball-liga.de/</PackageReleaseNotes>
-    <AssemblyVersion>4.0.3.0</AssemblyVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<AssemblyName>League</AssemblyName>
+		<RootNamespace>League</RootNamespace>
+		<UserSecretsId>ceea2bf6-8147-49b9-be85-26fca01f9ed3</UserSecretsId>
+		<NeutralLanguage></NeutralLanguage>
+		<Version>4.0.3</Version>
+		<PackageId>Volleyball-League</PackageId>
+		<Authors>axuno gGmbH</Authors>
+		<Product>Volleyball-League</Product>
+		<Description>Volleyball League is an open source sports platform that brings everything necessary to organize and to run a league.</Description>
+		<Copyright>(C) 2000-2020 axuo gGmbH</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/axuno/Volleyball-League</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/axuno/Volleyball-League</RepositoryUrl>
+		<PackageTags>volleyball league competition asp.net-core</PackageTags>
+		<PackageReleaseNotes>Production release for platform https://volleyball-liga.de/</PackageReleaseNotes>
+		<AssemblyVersion>4.0.3.0</AssemblyVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="cloudscribe.Web.Navigation" Version="4.0.3" />
-    <PackageReference Include="JSNLog" Version="2.29.0" />
-    <PackageReference Include="MailMergeLib" Version="5.7.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
-    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.5" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
-    <PackageReference Include="NLog" Version="4.7.2" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
-    <PackageReference Include="PuppeteerSharp" Version="2.0.3" />
-    <PackageReference Include="StackifyMiddleware" Version="3.0.5.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="cloudscribe.Web.Navigation" Version="4.0.3" />
+		<PackageReference Include="JSNLog" Version="2.29.0" />
+		<PackageReference Include="MailMergeLib" Version="5.7.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
+		<PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.5" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+		<PackageReference Include="NLog" Version="4.7.2" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
+		<PackageReference Include="PuppeteerSharp" Version="2.0.3" />
+		<PackageReference Include="StackifyMiddleware" Version="3.0.5.2" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="logs\" />
-    <Folder Include="ControllerAttributes\" />
-    <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\lib\dropzone\" />
-    <Folder Include="wwwroot\lib\tempusdominus-bootstrap-4\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="logs\" />
+		<Folder Include="ControllerAttributes\" />
+		<Folder Include="wwwroot\images\" />
+		<Folder Include="wwwroot\lib\dropzone\" />
+		<Folder Include="wwwroot\lib\tempusdominus-bootstrap-4\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="Chromium-Win\**\*.*" Exclude="Chromium-Win\**\*.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="Chromium-Win\**\*.*" Exclude="Chromium-Win\**\*.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="app_offline_.htm">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="app_offline_.htm">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Axuno.BackgroundTask\Axuno.BackgroundTask.csproj" />
-    <ProjectReference Include="..\Axuno.Web\Axuno.Web.csproj" />
-    <ProjectReference Include="..\TournamentManager\DAL\DatabaseGeneric\TournamentManager.DAL.DbGeneric.csproj" />
-    <ProjectReference Include="..\TournamentManager\DAL\DatabaseSpecific\TournamentManager.DAL.DBSpecific.csproj" />
-    <ProjectReference Include="..\TournamentManager\TournamentManager\TournamentManager.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Axuno.BackgroundTask\Axuno.BackgroundTask.csproj" />
+		<ProjectReference Include="..\Axuno.Web\Axuno.Web.csproj" />
+		<ProjectReference Include="..\TournamentManager\DAL\DatabaseGeneric\TournamentManager.DAL.DbGeneric.csproj" />
+		<ProjectReference Include="..\TournamentManager\DAL\DatabaseSpecific\TournamentManager.DAL.DBSpecific.csproj" />
+		<ProjectReference Include="..\TournamentManager\TournamentManager\TournamentManager.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Models\ErrorViewModels\StatusCodes.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>StatusCodes.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Models\ErrorViewModels\StatusDescriptions.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>StatusDescriptions.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Resources\DataAnnotationResource.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>DataAnnotationResource.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Resources\ModelBindingMessageResource.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ModelBindingMessageResource.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Views\Role\_AddMemberModalPartial - Copy.Designer.cs">
-      <DependentUpon>_AddMemberModalPartial.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="Views\Role\_AddMemberModalPartial.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>_AddMemberModalPartial.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Views\Role\_RemoveMemberModalPartial.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>_RemoveMemberModalPartial.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Views\TeamApplication\_TeamApplicationMessagesPartial.Designer.cs">
-      <DependentUpon>_TeamApplicationMessagesPartial.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="Views\Team\_MyTeamMessagesPartial.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>_MyTeamMessagesPartial.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Views\ViewNames.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ViewNames.tt</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Models\ErrorViewModels\StatusCodes.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>StatusCodes.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Models\ErrorViewModels\StatusDescriptions.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>StatusDescriptions.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Resources\DataAnnotationResource.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>DataAnnotationResource.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Resources\ModelBindingMessageResource.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>ModelBindingMessageResource.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Views\Role\_AddMemberModalPartial - Copy.Designer.cs">
+			<DependentUpon>_AddMemberModalPartial.resx</DependentUpon>
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+		</Compile>
+		<Compile Update="Views\Role\_AddMemberModalPartial.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>_AddMemberModalPartial.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Views\Role\_RemoveMemberModalPartial.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>_RemoveMemberModalPartial.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Views\TeamApplication\_TeamApplicationMessagesPartial.Designer.cs">
+			<DependentUpon>_TeamApplicationMessagesPartial.resx</DependentUpon>
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+		</Compile>
+		<Compile Update="Views\Team\_MyTeamMessagesPartial.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>_MyTeamMessagesPartial.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Views\ViewNames.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>ViewNames.tt</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Update="Views\Account\ConfirmRegistration.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Update="Views\Account\ConfirmRegistration.cshtml">
+			<Pack>$(IncludeRazorContentInPack)</Pack>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Models\ErrorViewModels\StatusDescriptions.de.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Models\ErrorViewModels\StatusCodes.de.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Models\ErrorViewModels\StatusCodes.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>StatusCodes.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Models\ErrorViewModels\StatusDescriptions.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>StatusDescriptions.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\DataAnnotationResource.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>DataAnnotationResource.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Resources\ModelBindingMessageResource.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>ModelBindingMessageResource.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\Role\_RemoveMemberModalPartial.resx">
-      <LastGenOutput>_RemoveMemberModalPartial.Designer.cs</LastGenOutput>
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\Role\_AddMemberModalPartial.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>_AddMemberModalPartial.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\TeamApplication\_TeamApplicationMessagesPartial.resx">
-      <LastGenOutput>_TeamApplicationMessagesPartial.Designer.cs</LastGenOutput>
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\Team\_MyTeamMessagesPartial.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>_MyTeamMessagesPartial.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Models\ErrorViewModels\StatusDescriptions.de.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Models\ErrorViewModels\StatusCodes.de.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Models\ErrorViewModels\StatusCodes.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>StatusCodes.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Models\ErrorViewModels\StatusDescriptions.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>StatusDescriptions.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Resources\DataAnnotationResource.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>DataAnnotationResource.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Resources\ModelBindingMessageResource.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>ModelBindingMessageResource.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Role\_RemoveMemberModalPartial.resx">
+			<LastGenOutput>_RemoveMemberModalPartial.Designer.cs</LastGenOutput>
+			<Generator>PublicResXFileCodeGenerator</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Role\_AddMemberModalPartial.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>_AddMemberModalPartial.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\TeamApplication\_TeamApplicationMessagesPartial.resx">
+			<LastGenOutput>_TeamApplicationMessagesPartial.Designer.cs</LastGenOutput>
+			<Generator>PublicResXFileCodeGenerator</Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Team\_MyTeamMessagesPartial.resx">
+			<Generator>PublicResXFileCodeGenerator</Generator>
+			<LastGenOutput>_MyTeamMessagesPartial.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="app_offline_.htm">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Views\ViewNames.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ViewNames.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="app_offline_.htm">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="Views\ViewNames.tt">
+			<Generator>TextTemplatingFileGenerator</Generator>
+			<LastGenOutput>ViewNames.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
+	<ItemGroup>
+		<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-    <TypeScriptTarget>ES5</TypeScriptTarget>
-    <TypeScriptJSXEmit>React</TypeScriptJSXEmit>
-    <TypeScriptModuleKind>AMD</TypeScriptModuleKind>
-    <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
-    <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
-    <TypeScriptRemoveComments>False</TypeScriptRemoveComments>
-    <TypeScriptOutFile />
-    <TypeScriptOutDir />
-    <TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
-    <TypeScriptNoEmitOnError>True</TypeScriptNoEmitOnError>
-    <TypeScriptSourceMap>True</TypeScriptSourceMap>
-    <TypeScriptMapRoot />
-    <TypeScriptSourceRoot />
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+		<TypeScriptTarget>ES5</TypeScriptTarget>
+		<TypeScriptJSXEmit>React</TypeScriptJSXEmit>
+		<TypeScriptModuleKind>AMD</TypeScriptModuleKind>
+		<TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
+		<TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
+		<TypeScriptRemoveComments>False</TypeScriptRemoveComments>
+		<TypeScriptOutFile />
+		<TypeScriptOutDir />
+		<TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
+		<TypeScriptNoEmitOnError>True</TypeScriptNoEmitOnError>
+		<TypeScriptSourceMap>True</TypeScriptSourceMap>
+		<TypeScriptMapRoot />
+		<TypeScriptSourceRoot />
+	</PropertyGroup>
 
+	<!-- Custom PropertyGroup to add the Environment name during publish. The EnvironmentName property is used for the 'Environment' variable in web.config when publishing. -->
+	<PropertyGroup Condition=" '$(Configuration)' == '' Or '$(Configuration)' == 'Debug'">
+		<EnvironmentName>Development</EnvironmentName>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)' != '' AND '$(Configuration)' != 'Debug' ">
+		<EnvironmentName>Production</EnvironmentName>
+	</PropertyGroup>
 </Project>
