--- a/League/package.json
+++ b/League/package.json
@@ -14,13 +14,13 @@
     "bootstrap-select": "1.13.17",
     "cssnano": "4.1.10",
     "dropzone": "5.7.1",
-    "grunt": "1.1.0",
+    "grunt": "1.2.1",
     "grunt-cli": "1.3.2",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-uglify": "4.0.1",
+    "grunt-contrib-uglify": "5.0.0",
     "grunt-contrib-watch": "1.1.0",
-    "grunt-postcss": "^0.9.0",
+    "grunt-postcss": "0.9.0",
     "grunt-sass": "3.1.0",
     "jquery": "3.5.1",
     "jquery-validation": "1.19.2",
@@ -34,7 +34,5 @@
     "tempusdominus-bootstrap-4": "5.1.2",
     "tether": "1.4.7"
   },
-  "dependencies": {
-    "npm-install-peers": "^1.2.1"
-  }
+  "dependencies": {}
 }
