--- a/League/League.csproj
+++ b/League/League.csproj
@@ -29,7 +29,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="3.1.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.6" />
 		<PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.6" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
 		<PackageReference Include="NLog" Version="4.7.3" />
 		<PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
 		<PackageReference Include="PuppeteerSharp" Version="2.0.4" />
@@ -41,6 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Areas\Admin\Models\" />
 		<Folder Include="logs\" />
 		<Folder Include="ControllerAttributes\" />
 		<Folder Include="wwwroot\images\" />
