--- a/League/Configuration/LeagueSettings.A-Indoor.config
+++ b/League/Configuration/LeagueSettings.A-Indoor.config
@@ -5,11 +5,11 @@
   <ShortName>Mixedliga Augsburg</ShortName>
   <Description>Die Volleyball-Mixedliga Augsburg ist eine Hallenliga für gemischte Teams aus dem Großraum Augsburg. Sie besteht seit über 20 Jahren.</Description>
   <HomepageUrl>https://volleyball-liga.de/augsburg</HomepageUrl>
-  <ApplicationTournamentId IsAllowed="false">22</ApplicationTournamentId>
-  <ApplicationDeadline>2018-05-04T00:00:00</ApplicationDeadline>
-  <MapTournamentId>22</MapTournamentId>
+  <ApplicationTournamentId IsAllowed="true">23</ApplicationTournamentId>
+  <ApplicationDeadline>2020-09-30T00:00:00</ApplicationDeadline>
+  <MapTournamentId>23</MapTournamentId>
   <!-- if a team is registered for ApplicationTournamentId this is used for editing the team -->
-  <TeamTournamentId>22</TeamTournamentId>
+  <TeamTournamentId>23</TeamTournamentId>
   <MatchPlanTournamentId>22</MatchPlanTournamentId>
   <MatchResultTournamentId>22</MatchResultTournamentId>
   <Photos>
@@ -24,7 +24,7 @@
     <BankName>Fidor Bank AG</BankName>
     <BIC>FDDODEMMXXX</BIC>
     <IBAN>DE61 700 222 000 020 137 800</IBAN>
-    <Amount>19.00</Amount>
+    <Amount>40.00</Amount>
     <Currency>EUR</Currency>
   </Bank>
   <FixtureRuleSet>
