--- a/League/Configuration/NLog.Production.config
+++ b/League/Configuration/NLog.Production.config
@@ -31,7 +31,11 @@
 
         <!-- Skip Microsoft logs with final=true, and so only log own logs -->
         <logger name="Microsoft.*" minlevel="Trace" writeTo="nowhere" final="true" />
+		
         <!-- Other log content -->
-        <logger name="*" minlevel="Warn" writeTo="ownFile-web" />
-    </rules>
+        <logger name="TournamentManager.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+        <logger name="League.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+        <logger name="Axuno.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+        <logger name="*" minlevel="Info" writeTo="ownFile-web" />    
+	</rules>
 </nlog>
