Initial new multi tenancy features

--- a/League/Configuration/LeagueSettings.A-Beach.config
+++ b/League/Configuration/LeagueSettings.A-Beach.config
@@ -14,9 +14,9 @@
   <MatchResultTournamentId>3</MatchResultTournamentId>
   <Photos>
     <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
-    <TeamDefaultFilename>kein_foto.jpg</TeamDefaultFilename>
+    <TeamDefaultFilename>no_photo.jpg</TeamDefaultFilename>
     <PersonPhotoFolder>personphoto</PersonPhotoFolder>
-    <PersonDefaultFilename>kein_foto.jpg</PersonDefaultFilename>
+    <PersonDefaultFilename>no_photo.jpg</PersonDefaultFilename>
   </Photos>
   <Bank>
     <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
