Updated version in project files to v4.3.0

--- a/League/Configuration/Tenant.Default.Development.config
+++ b/League/Configuration/Tenant.Default.Development.config
@@ -3,10 +3,8 @@
     <Identifier>League</Identifier>
     <Guid>BF2E2412-C610-4521-AE15-7BDA286E4480</Guid>
     <IsDefault>true</IsDefault>
-        <SiteContext>
-        <!-- HostName may only be blank, if UrlSegmentValue is set -->
-        <HostName></HostName>
-        <!-- The value of the URL segment used to identify the organization. May be blank if HostName is set. -->
+    <SiteContext>
+        <!-- The value of the URL segment used to identify the organization. -->
         <UrlSegmentValue></UrlSegmentValue>
         <!-- FolderName must always be present -->
         <FolderName></FolderName>
@@ -17,40 +15,39 @@
             <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
             <PeoplePhotoFolder>personphoto</PeoplePhotoFolder>
         </Photos>
-
         <Email>
             <ContactFrom>
-                <DisplayName>Testorganization Augsburg</DisplayName>
-                <Address>testorg@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </ContactFrom>
             <ContactTo>
-                <DisplayName>Testorganization Augsburg</DisplayName>
-                <Address>testorg@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </ContactTo>
             <GeneralFrom>
-                <DisplayName>Testorganization Augsburg</DisplayName>
-                <Address>testorg@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralFrom>
             <GeneralTo>
-                <DisplayName>Testorganization Augsburg</DisplayName>
-                <Address>testorg@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralTo>
             <GeneralBcc>
-                <DisplayName>Testorganization Augsburg</DisplayName>
-                <Address>testorg@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralBcc>
         </Email>
     </SiteContext>
     <DbContext>
-        <ConnectionKey>TestOrgConnectionString</ConnectionKey>
-        <Catalog>TestOrg</Catalog>
+        <ConnectionKey>AIndoorConnectionString</ConnectionKey>
+        <Catalog>a-indoor</Catalog>
         <Schema>dbo</Schema>
         <CommandTimeOut>15</CommandTimeOut>
     </DbContext>
     <OrganizationContext>
         <Name>volleyball-liga.de</Name>
         <ShortName>volleyball-liga.de</ShortName>
-        <Description>Default tenant context</Description>
+        <Description></Description>
         <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
         <Bank>
             <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
@@ -63,14 +60,14 @@
         </Bank>
     </OrganizationContext>
     <TournamentContext>
-        <ApplicationTournamentId>3</ApplicationTournamentId>
+        <ApplicationTournamentId>0</ApplicationTournamentId>
         <ApplicationAllowed>true</ApplicationAllowed>
         <ApplicationDeadline>2020-05-04T00:00:00</ApplicationDeadline>
-        <MapTournamentId>2</MapTournamentId>
+        <MapTournamentId>0</MapTournamentId>
         <!-- if a team is registered for ApplicationTournamentId this is used for editing the team -->
-        <TeamTournamentId>2</TeamTournamentId>
-        <MatchPlanTournamentId>2</MatchPlanTournamentId>
-        <MatchResultTournamentId>2</MatchResultTournamentId>
+        <TeamTournamentId>0</TeamTournamentId>
+        <MatchPlanTournamentId>0</MatchPlanTournamentId>
+        <MatchResultTournamentId>0</MatchResultTournamentId>
         <FixtureRuleSet>
             <RegularMatchStartTime>
                 <MinDayTime>18:00:00</MinDayTime>
