--- a/League/Configuration/Tenant.Default.Production.config
+++ b/League/Configuration/Tenant.Default.Production.config
@@ -1,43 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TenantContext>
-    <Identifier>a-indoor</Identifier>
-    <Guid>BF2E2412-C610-4521-AE20-7BDA286E4480</Guid>
-    <IsDefault>false</IsDefault>
-        <SiteContext>
-        <!-- HostName may only be blank, if UrlSegmentValue is set -->
-        <HostName></HostName>
-        <!-- The value of the URL segment used to identify the organization. May be blank if HostName is set. -->
-        <UrlSegmentValue>augsburg</UrlSegmentValue>
+    <Identifier>League</Identifier>
+    <Guid>BF2E2412-C610-4521-AE15-7BDA286E4480</Guid>
+    <IsDefault>true</IsDefault>
+    <SiteContext>
+        <!-- The value of the URL segment used to identify the organization. -->
+        <UrlSegmentValue></UrlSegmentValue>
         <!-- FolderName must always be present -->
-        <FolderName>a-indoor</FolderName>
-        <IdentityCookieName>.LeagueAugsburg</IdentityCookieName>
-        <SessionName>.LeagueAugsburg</SessionName>
-        <HideInMenu>false</HideInMenu>
+        <FolderName></FolderName>
+        <IdentityCookieName>.League</IdentityCookieName>
+        <SessionName>.League</SessionName>
+        <HideInMenu>true</HideInMenu>
         <Photos>
             <TeamPhotoFolder>teamphoto</TeamPhotoFolder>
             <PeoplePhotoFolder>personphoto</PeoplePhotoFolder>
         </Photos>
-
         <Email>
             <ContactFrom>
-                <DisplayName>Mixedliga Augsburg</DisplayName>
-                <Address>a-indoor@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </ContactFrom>
             <ContactTo>
-                <DisplayName>Mixedliga Augsburg</DisplayName>
-                <Address>a-indoor@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </ContactTo>
             <GeneralFrom>
-                <DisplayName>Mixedliga Augsburg</DisplayName>
-                <Address>a-indoor@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralFrom>
             <GeneralTo>
-                <DisplayName>Mixedliga Augsburg</DisplayName>
-                <Address>a-indoor@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralTo>
             <GeneralBcc>
-                <DisplayName>Mixedliga Augsburg</DisplayName>
-                <Address>a-indoor@volleyball-liga.de</Address>
+                <DisplayName>Volleyball-Liga</DisplayName>
+                <Address>league@volleyball-liga.de</Address>
             </GeneralBcc>
         </Email>
     </SiteContext>
@@ -48,29 +45,29 @@
         <CommandTimeOut>15</CommandTimeOut>
     </DbContext>
     <OrganizationContext>
-        <Name>Volleyball-Mixedliga Augsburg</Name>
-        <ShortName>Mixedliga Augsburg</ShortName>
-        <Description>Die Volleyball-Mixedliga Augsburg ist eine Hallenliga für gemischte Teams aus dem Großraum Augsburg. Sie besteht seit über 20 Jahren.</Description>
-        <HomepageUrl>https://volleyball-liga.de/augsburg</HomepageUrl>
+        <Name>volleyball-liga.de</Name>
+        <ShortName>volleyball-liga.de</ShortName>
+        <Description></Description>
+        <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
         <Bank>
             <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
-            <Recipient>axuno - Mixedliga Augsburg</Recipient>
+            <Recipient>axuno gemeinnuetzige GmbH - Testorganization Augsburg</Recipient>
             <BankName>Fidor Bank AG</BankName>
             <Bic>FDDODEMMXXX</Bic>
             <Iban>DE61 700 222 000 020 137 800</Iban>
-            <Amount>40.00</Amount>
+            <Amount>0.00</Amount>
             <Currency>EUR</Currency>
         </Bank>
     </OrganizationContext>
     <TournamentContext>
-        <ApplicationTournamentId>23</ApplicationTournamentId>
-        <ApplicationAllowed>false</ApplicationAllowed>
-        <ApplicationDeadline>2020-09-30T00:00:00</ApplicationDeadline>
-        <MapTournamentId>23</MapTournamentId>
+        <ApplicationTournamentId>0</ApplicationTournamentId>
+        <ApplicationAllowed>true</ApplicationAllowed>
+        <ApplicationDeadline>2021-01-01T00:00:00</ApplicationDeadline>
+        <MapTournamentId>0</MapTournamentId>
         <!-- if a team is registered for ApplicationTournamentId this is used for editing the team -->
-        <TeamTournamentId>23</TeamTournamentId>
-        <MatchPlanTournamentId>23</MatchPlanTournamentId>
-        <MatchResultTournamentId>23</MatchResultTournamentId>
+        <TeamTournamentId>0</TeamTournamentId>
+        <MatchPlanTournamentId>0</MatchPlanTournamentId>
+        <MatchResultTournamentId>0</MatchResultTournamentId>
         <FixtureRuleSet>
             <RegularMatchStartTime>
                 <MinDayTime>18:00:00</MinDayTime>
