Added logging to class Startup

--- a/League/Configuration/AppSettings.Development.json
+++ b/League/Configuration/AppSettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
     "IsLocal": true,
     "Logging": {
-        "IncludeScopes": false,
+        "IncludeScopes": {},
         "LogLevel": {
             "Default": "Trace",
             "Microsoft": "Information"
