--- a/League/Configuration/AppSettings.Production.json
+++ b/League/Configuration/AppSettings.Production.json
@@ -1,7 +1,7 @@
 ﻿{
 	"IsLocal": false,
 	"Logging": {
-		"IncludeScopes": false,
+		"IncludeScopes": {},
 		"LogLevel": {
 			"Default": "Debug",
 			"System": "Information",
