--- a/League/Configuration/AppSettings.json
+++ b/League/Configuration/AppSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
+    "IncludeScopes": {},
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information",
